# MonitorControl

./: CMakeLists.txt  WindowsErrorException.cpp  WindowsErrorException.h  WindowsExtraCodes.rc  monitorcontroller.cpp  monitorcontroller.h  physicalmonitor.cpp  physicalmonitor.h  primarymonitor.cpp  primarymonitor.h
